<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/Background">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/car"
            android:textColor="@color/primaryDarkColor"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/car"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/car"
            android:onClick="carClick" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/plain"
            android:textStyle="bold|italic"
            android:textSize="20sp"
            android:textColor="@color/primaryDarkColor"
            android:textAlignment="center"/>
        <Button
            android:id="@+id/plain"
            android:layout_marginTop="3dp"
            android:layout_height="200dp"
            android:layout_width="wrap_content"
            android:layout_weight="6"
            android:background="@drawable/plain"
            android:onClick="airplainClick"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/public_transport"
            android:textStyle="bold|italic"
            android:textSize="20sp"
            android:textColor="@color/primaryDarkColor"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/train"
            android:layout_marginTop="3dp"
            android:layout_height="200dp"
            android:layout_width="wrap_content"
            android:layout_weight="6"
            android:background="@drawable/train"
            android:onClick="PublicClick" />

    </LinearLayout>
    </ScrollView>

</LinearLayout>