<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/tvCityName"
    android:padding="4dp"
    android:textSize="35sp"
    android:textColor="@color/primaryDarkColor"
    tools:text="JFSÉLJSél" />

<TextView
    android:id="@+id/tvCityDetail"

    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:padding="4dp"
    android:textSize="15sp"
    android:textIsSelectable="true"
    android:textColor="@color/secondaryDarkColor"
    tools:text="JFSÉLJSélgfsdgdsgskd gésdgjkésdgkldg ésdlkgésdkgésdkgjsdég ésjgkdl"
    android:textStyle="italic"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivIcon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                app:srcCompat="@drawable/baseline_highlight_off_black_18dp" />
            <TextView
                android:id="@+id/tvWeatherMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/primaryDarkColor"
                tools:text="Clear"/>



        </LinearLayout>

        <TextView
            android:id="@+id/tvWeatherDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColor="@color/primaryDarkColor"
            android:textStyle="italic"
            tools:text="Clear sky"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sights"
            android:textColor="@color/primaryDarkColor"
            android:textSize="15sp" />


    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="2dp"
            android:contentDescription="@string/sight1"
            android:src="@drawable/sight1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvCitysight1"
            android:textSize="20sp"
            android:padding="10dp"
            android:layout_gravity="center"
            tools:text="SIGHT1"
            android:textColor="@color/primaryDarkColor"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginBottom="2dp"
            android:contentDescription="@string/sight2"
            android:src="@drawable/sight2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvCitysight2"
            tools:text="SIGHT1"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:padding="10dp"
            android:textColor="@color/primaryDarkColor"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginBottom="2dp"
            android:contentDescription="@string/sight3"
            android:src="@drawable/sight3" />

        <TextView
            android:id="@+id/tvCitysight3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:textColor="@color/primaryDarkColor"
            android:textSize="20sp"
            tools:text="SIGHT1" />
    </LinearLayout>


</LinearLayout>